# dev_boilerplate_course

./: .gitignore  README.md  README_lectures_outline.md  Untitled.ipynb  dashboard_functions_exercise_total_distance_and_points.py  exercise.ipynb  git_lecture_instructions.md  new_file.txt  playground_file.txt  pyproject.toml  r4m.ipynb  txt_on_branch.txt  windows_terminal_commands.md
.ipynb_checkpoints/: r4m-checkpoint.py
lecture_notes/: lecture_4_mongodb_intro.md  ssh_config.md
lecture_notes/lecture_1_git_GitHub/: git_GitHub.md  git_lecture_instructions.md  lecture_1_play_exercise.txt  windows_terminal_commands.md
lecture_notes/lecture_1_git_structure/: git_lecture_instructions.md  lecture_1_play_exercise.txt  windows_terminal_commands.md
lecture_notes/lecture_2_py_dev_env/: IDE_env_tools.md  conda.md  pipx_poetry_notes.md
lecture_notes/lecture_2_venv_pycharm_poetry/: poetry_notes.md
lecture_notes/lecture_3_modular_development/: lecture_3_custom_functions_modules.md  lecture_3_custom_streamilt_functions  lecture_3_python_tools_file_structure.md  lecture_3a_custom_functions_modules.md  lecture_3b_hypot_module.py  lecture_3c_reuse_functions.py  lecture_3d_user_define_functions.py  lecture_3e_user_functions_modules.ipynb  lyrics_function.py  song_function.py
lecture_notes/lecture_4_mongoDB_intro/: lecture_4_mongodb_intro.md
lecture_notes/lecture_4_streamlit_app/: lecture_4_build_custom_interactive_web_app.md
src/: create_2.py  create_dashboard.py  dash_2.py  dashboard_functions.py  examine_data.ipynb  exams_file.py
src/data/: run4moreProd.activities.json
(+15 files in other folders)
