[tool.poetry]
name = "dev-boilerplate-course"
version = "0.1.0"
description = ""
authors = ["ΘΑΝΑΣΗΣ ΑΡΓΥΡΙΟΥ <argythana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
streamlit = "^1.30.0"
jupyterlab = "^4.0.10"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
